updates to all structure
